[gd_scene load_steps=8 format=3 uid="uid://dq0hve3xn83nl"]

[ext_resource type="Script" path="res://supplies/gold_mine/gold_mine.gd" id="1_fhxx5"]
[ext_resource type="Texture2D" uid="uid://qn0rey6nfou2" path="res://supplies/gold_mine/GoldMine_Inactive.png" id="1_ubblb"]
[ext_resource type="Texture2D" uid="uid://6eqb15b527fm" path="res://supplies/gold_mine/GoldMine_Active.png" id="2_p7lfs"]
[ext_resource type="Texture2D" uid="uid://ddhdu080340vt" path="res://supplies/gold_mine/GoldMine_Destroyed.png" id="3_7rjab"]
[ext_resource type="PackedScene" uid="uid://dtg5l7s1ctj5h" path="res://supplies/gold_spawn.tscn" id="3_j1r7p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mshjr"]
size = Vector2(233, 122)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s827y"]
size = Vector2(138, 30)

[node name="GoldMine" type="Area2D"]
y_sort_enabled = true
collision_layer = 4
script = ExtResource("1_fhxx5")
supply_scene = ExtResource("3_j1r7p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -33)
shape = SubResource("RectangleShape2D_mshjr")

[node name="InactiveSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("1_ubblb")
offset = Vector2(0, -41)

[node name="ActiveSprite" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(0, -41)
texture = ExtResource("2_p7lfs")

[node name="DestroyedSprite" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(0, -41)
texture = ExtResource("3_7rjab")

[node name="GatherPosition" type="Marker2D" parent="."]
position = Vector2(0, 15)

[node name="SupplyPosition" type="Marker2D" parent="."]
position = Vector2(80, 40)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, -42)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_s827y")

[connection signal="body_entered" from="." to="." method="_on_area_2d_body_entered"]
